Some changes in Part 3

--- a/part-3.html
+++ b/part-3.html
@@ -241,33 +241,34 @@
               At the end of this part, you will be able to:
             </h5>
             <ul>
-              <li>Understand what is CSS and it's relationship with HTML.</li>
+              <li>Understand what CSS is and its relationship with HTML.</li>
               <li>Use basic CSS to modify the style and layout of your website.</li>
-              <li>Have a basic knowledge of what Bootstrap is and how to install it.</li>
-              <li>Use Bootstrap's "library" of components to style and customize responsive mobile-first websites.</li>
+              <li>Get a basic knowledge of Bootstrap and understand its benefits.</li>
             </ul>
           </div>
         </header>
         <article class="row justify-content-center">
           <div class="col-md-6 col-xxl-5 py-3">
             <h3 class="color-buas text-center">Contents of this part</h3>
-            <p>This third chapter you'l learn how to style your website using CSS. You'l also be introduced to Bootstrap which is a "library" of CSS components that you can freely use.</p>
+            <p>In this third chapter you&rsquo;ll learn how to style your website using CSS. You&rsquo;ll also be introduced to Bootstrap which is a &ldquo;library&rdquo; of CSS components that you can freely use.</p>
             <ul>
-              <li>In &ldquo;<a href="#what_is_css">What is CSS?</a>&rdquo;, you will learn it's syntax and it's realtionship to HTML.</li>
-              <li>The section &ldquo;<a href="#practice_editing_styles">In practice: editing styles.css</a>&rdquo; gives you instructions to write CSS code to modify the style of your website.</li>
-              <li>Next, you learn &ldquo;<a href="#what_is_bootstrap">What is Boostrap</a>&rdquo; a very popular libray of CSS components that allows you to build responsive mobile-first sites.</li>
-              <li>Put in practice &ldquo;<a href="#practice_using_bootstrap">Bootstrap</a>&ldquo; by installing the framework, trying out some components and using it's grid layout structure to create a resposive layout.</li>
-              <li>Finally in &ldquo;<a href="#using_fonts">use fonts</a>&ldquo; you will learn how to install different fonts to customize your webesite.</li>
+              <li>In &ldquo;<a href="#what_is_css">CSS Basics</a>&rdquo;, you will learn the syntax of the CSS language and its relationship to HTML.</li>
+              <li>The section &ldquo;<a href="#practice_editing_styles">Practice: edit styles.css</a>&rdquo; gives you step-by-step instructions to write CSS code to modify the style of your website.</li>
+              <li>Next, you learn the &ldquo;<a href="#what_is_bootstrap">basics of Bootstrap</a>&rdquo; a very popular library of CSS components that allows you to build responsive mobile-first sites.</li>
+              <li><a href="#combine_bootstrap_css">Bootstrap can be combined with your own styles</a>, learn how in the 5<sup>th</sup> section.</li>
+              <li>Finally you will learn how to <a href="#using_fonts">use fonts</a> to customize your website.</li>
             </ul>
           </div>
           <div class="col-md-6 col-xxl-5 py-3 bg-lightblue">
-            <h3 class="color-blue text-center">Do the work, step by step</h3>
-            <p>This is a very brief overview of the tasks you will have to do to complete the XXX workshop. Items 1 to 4 of the list below are explained in detail in <a href="#setting_up_tools">section 3.X</a> and items 5 to 7 in <a href="#editing_publishing">section 3.X</a>.</p>
+            <h3 class="color-blue text-center">Do the work</h3>
+            <p>For the assignment, and as part of our third workshop, you must style up your CV/résumé.</p>
+            <p>The requirements are that you must customize at least:</p>
             <ol>
-              <li>XXXX.</li>
-              <li>XXXX</li>
-              <li>XXXX.</li>
+              <li>One font colour. This can be done in two ways, either by writing <a href="#what_is_css">CSS code</a>, or by <a href="#what_is_bootstrap">using Bootstrap</a></li>
+              <li>One background colour, which can also be done both ways</li>
+              <li>One font, where you will need to use an external service such as <a href="https://fonts.google.com/" target="_blank">Google Fonts</a>, <a href="https://fonts.adobe.com/" target="_blank">Adobe Fonts</a> or <a href="https://www.fontshare.com/" target="_blank">Fontshare</a>.</li>
             </ol>
+            <p>These skills will be essential as you start working on the group assignment, which must use styles to </p>
           </div>
         </article>
         <footer class="row bg-gray">
@@ -635,10 +636,10 @@
           <div class="col-md-6">
             <h5>Summary</h5>
             <ul>
-              <li>Bootstrap is a library of CSS classes.</li>
+              <li>Bootstrap is a library of CSS classes, with a focus on making your website mobile-friendly.</li>
               <li>Rather than coming up with your own CSS code, rest on the &ldquo;shoulders of giants&rdquo;</li>
-              <li>Use Boostrap classes to change colours, add margins and borders, etc.</li>
-              <li>Check part 4 for advanced uses of bootstrap</li>
+              <li>Use Bootstrap classes to change colours, add margins and borders, create buttons, etc.</li>
+              <li>Check <a href="part-4.html#ux_patterns">part 4.4</a> for advanced uses of Bootstrap</li>
             </ul>
           </div>
         </header>
@@ -656,13 +657,14 @@
             </ul>
           </div>
           <div class="col-md-6 col-xxl-5 py-3 bg-lightorange">
-            <h3>What does Bootstrap do?</h3>
+            <h3 class="text-center">What does Bootstrap do?</h3>
             <p>Boostrap provides three things that are incredibly useful for web developers:</p>
             <ol>
               <li>It offers <strong>standard styles</strong> for common HTML elements (&lt;p&gt;, &lt;h1&gt;, etc.) that look nicer than default browser styles.</li>
               <li>You can choose from <strong>hundreds of css classes</strong> to add colours, font sizes, alignments, margins</li>
-              <li>It provides <strong>complex components</strong> &mdash; this is discussed in detail in part 4 of this guide.</li>
+              <li>It provides <strong>complex components</strong> such as buttons, cards, alerts, etc.</li>
             </ol>
+            <p>Bootstrap&rsquo;s approach is to help you build <strong>mobile-friendly</strong> responsive websites. Remember that the majority of your audience will read your website on a mobile!</p>
             <p>To learn about Bootstrap&rsquo;s capacities and find examples you can copy, <a href="https://getbootstrap.com/docs/" target="_blank">check the official Bootstrap documentation</a>.</p>
           </div>
           <div class="col-md-6 col-xxl-5 py-3">
@@ -771,7 +773,7 @@
                 <h5 class="text-danger mt-2 mb-0">Result:</h5>
               </div>
               <div class="col-sm-7 col-md-8">
-                <div class="p-2 mb-2 border border-dark bg-white font-monospace text-primary lh-1">
+                <div class="p-2 mb-2 border border-dark bg-white rounded font-monospace text-primary lh-1">
                   <p class="mb-0">&lt;div <span class="text-success">class="<span class="text-danger">bg-danger border border-3 border-dark</span>"</span>&gt;</p>
                   <p class="mb-0 ms-2">&lt;div <span class="text-success">class="<span class="text-danger">bg-primary border border-3 border-info rounded text-white</span>"</span>&gt;</p>
                   <p class="mb-0 ms-3 text-black">No margin, no padding.</p>
@@ -787,7 +789,7 @@
                 </div>
               </div>
               <div class="col-sm-7 col-md-8">
-                <div class="p-2 mb-2 border border-dark bg-white font-monospace text-primary lh-1">
+                <div class="p-2 mb-2 border border-dark bg-white rounded font-monospace text-primary lh-1">
                   <p class="mb-0">&lt;div <span class="text-success">class="<span class="text-danger">bg-danger &hellip;</span>"</span>&gt;</p>
                   <p class="mb-0 ms-2">&lt;div <span class="text-success">class="<span class="text-danger">bg-primary &hellip; <strong>m-3</strong></span>"</span>&gt;</p>
                   <p class="mb-0 ms-3 text-black">Size 3 margins on all sides, no padding.</p>
@@ -803,7 +805,7 @@
                 </div>
               </div>
               <div class="col-sm-7 col-md-8">
-                <div class="p-2 mb-2 border border-dark bg-white font-monospace text-primary lh-1">
+                <div class="p-2 mb-2 border border-dark bg-white rounded font-monospace text-primary lh-1">
                   <p class="mb-0">&lt;div <span class="text-success">class="<span class="text-danger">bg-danger &hellip;</span>"</span>&gt;</p>
                   <p class="mb-0 ms-2">&lt;div <span class="text-success">class="<span class="text-danger">bg-primary &hellip; <strong>p-2</strong></span>"</span>&gt;</p>
                   <p class="mb-0 ms-3 text-black">No margin, size 2 padding on all sides.</p>
@@ -819,7 +821,7 @@
                 </div>
               </div>
               <div class="col-sm-7 col-md-8">
-                <div class="p-2 mb-2 border border-dark bg-white font-monospace text-primary lh-1">
+                <div class="p-2 mb-2 border border-dark bg-white rounded font-monospace text-primary lh-1">
                   <p class="mb-0">&lt;div <span class="text-success">class="<span class="text-danger">bg-danger &hellip;</span>"</span>&gt;</p>
                   <p class="mb-0 ms-2">&lt;div <span class="text-success">class="<span class="text-danger">bg-primary &hellip; <strong>mt-2 mb-5 ms-4 me-1 px-3 py-1</strong></span>"</span>&gt;</p>
                   <p class="mb-0 ms-3 text-black">Margins and paddings of different sizes on different sides.</p>
@@ -833,6 +835,38 @@
                     Margins and paddings of different sizes on different sides.
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xxl-5 py-3">
+            <h3 class="color-blue text-center">Components</h3>
+            <p>Bootstrap provides a comprehensive library of UX patterns called components, that you can reuse just by <strong>copying, pasting and customizing blocks of code</strong>.</p>
+            <p>Components include cards, carousels, navigation bars, accordions, badges, and many more&hellip;</p>
+            <p>Find out more by checking:</p>
+            <ul>
+              <li><a href="part-4.html#ux_patterns">Part 4.4 (UX Patterns)</a> of this guide. Use the Developer Tools or &ldquo;View Source&rdquo; to copy some of the examples.</li>
+              <li><a href="https://getbootstrap.com/docs/5.1/components/" target="_blank">The list of components</a> in the Boostrap documentation.</li>
+              <li>A visual overview of all components called <a href="https://getbootstrap.com/docs/5.1/examples/cheatsheet/" target="_blank">The Bootstrap cheatsheet.</a></li>
+            </ul>
+            <p>Don&rsquo;t forget that all of the above are <strong>open-source</strong> resources. Copying open-source code is <strong class="text-danger">not cheating</strong>, it&rsquo;s actually good practice.</p>
+          </div>
+          <div class="col-md-6 col-xxl-5 py-3 bg-lightorange">
+            <div class="row">
+              <div>
+                <h3 class="text-center">Example, a button:</h3>
+                <p>This example shows the code of a button that I copied from the <a href="https://getbootstrap.com/docs/5.1/components/buttons/" target="_blank">buttons page in Bootstrap&rsquo;s documentation</a>.</p>
+                <p>It needs two classes: <strong>btn</strong> to style it as a button and <strong>btn-primary</strong> to make it a blue button.</p>
+              </div>
+              <div class="col-sm-6">
+                <h5 class="text-success mt-2 mb-0">Code:</h5>
+                <div class="p-2 mb-2 border border-dark rounded bg-white font-monospace text-primary">
+                  &lt;button <span class="text-success">type="<span class="text-danger">button</span>" class="<span class="text-danger"><wbr>btn btn-primary<wbr></span>"</span>&gt;<span class="text-dark"><wbr>Click me!<wbr></span>&lt;/button&gt;
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <h5 class="text-danger mt-2 mb-0">Result:</h5>
+                <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#yay">Click me!</button>
+                <p class="fs-4 text-primary collapse" id="yay">Yay!</p>
               </div>
             </div>
           </div>
