Typo fix in part 3

--- a/part-3.html
+++ b/part-3.html
@@ -658,7 +658,7 @@
           </div>
           <div class="col-md-6 col-xxl-5 py-3 bg-lightorange">
             <h3 class="text-center">What does Bootstrap do?</h3>
-            <p>Boostrap provides three things that are incredibly useful for web developers:</p>
+            <p>Bootstrap provides three things that are incredibly useful for web developers:</p>
             <ol>
               <li>It offers <strong>standard styles</strong> for common HTML elements (&lt;p&gt;, &lt;h1&gt;, etc.) that look nicer than default browser styles.</li>
               <li>You can choose from <strong>hundreds of css classes</strong> to add colours, font sizes, alignments, margins</li>
@@ -845,7 +845,7 @@
             <p>Find out more by checking:</p>
             <ul>
               <li><a href="part-4.html#ux_patterns">Part 4.4 (UX Patterns)</a> of this guide. Use the Developer Tools or &ldquo;View Source&rdquo; to copy some of the examples.</li>
-              <li><a href="https://getbootstrap.com/docs/5.1/components/" target="_blank">The list of components</a> in the Boostrap documentation.</li>
+              <li><a href="https://getbootstrap.com/docs/5.1/components/" target="_blank">The list of components</a> in the Bootstrap documentation.</li>
               <li>A visual overview of all components called <a href="https://getbootstrap.com/docs/5.1/examples/cheatsheet/" target="_blank">The Bootstrap cheatsheet.</a></li>
             </ul>
             <p>Don&rsquo;t forget that all of the above are <strong>open-source</strong> resources. Copying open-source code is <strong class="text-danger">not cheating</strong>, it&rsquo;s actually good practice.</p>
@@ -904,7 +904,7 @@
               <thead>
                 <tr>
                   <th>Use cases</th>
-                  <th>When to use Boostrap classes?</th>
+                  <th>When to use Bootstrap classes?</th>
                   <th>When to create your own CSS?</th>
                 </tr>
               </thead>
@@ -916,7 +916,7 @@
                 </tr>
                 <tr>
                   <th>Fonts</th>
-                  <td>Bootstrap only gives you access to a default sans-serif font. Use Boostrap classes for effects such as bold type, italics, underlines</td>
+                  <td>Bootstrap only gives you access to a default sans-serif font. Use Bootstrap classes for effects such as bold type, italics, underlines</td>
                   <td>When you want to use any font that suits your brand identity, follow the instructions below in part 3.6.</td>
                 </tr>
                 <tr>
