--- a/part-4.html
+++ b/part-4.html
@@ -581,8 +581,8 @@
           <div class="col-md-6 col-xxl-5 py-3 bg-lightblue">
             <h3 class="text-center">UX Patterns in Bootstrap</h3>
             <p>Bootstrap, which you&rsquo; learned about in Part 3, and that is used in all the PRJ4 templates, gives you access to many UX patterns.</p>
-            <p>You can find a list of these patterns in the Bootstrap documentation at <a href="https://getbootstrap.com/docs/5.1/examples/cheatsheet/" target="_blank">getbootstrap.com<wbr>/docs</a> or just below</p>
-            <p>For each of these UX elements, the Bootstrap documentation gives you an example of code you can copy, tweak and reuse to achieve the same result.</p>
+            <p>You can find a list of these patterns in the Bootstrap documentation at <a href="https://getbootstrap.com/docs/5.1/examples/cheatsheet/" target="_blank">getbootstrap.com<wbr>/docs</a> or just below.</p>
+            <p>For each of these UX elements, the Bootstrap documentation gives you an example of code you can <strong>copy, tweak and reuse</strong> to achieve the same result.</p>
             <figure>
               <div class="bg-white border border-secondary rounded-top p-3 text-center">
                 <div class="spinner-border text-primary"></div>
