Added Part 3 structure to index

--- a/index.html
+++ b/index.html
@@ -354,6 +354,55 @@
         </article>
       </section>
 
+      <section id="p_3">
+        <header class="section-header justify-content-center text-light bg-gradient py-5 row">
+          <div class="col-xxl-10">
+            <h2 class="display-3 fw-bolder lh-1 mb-4">
+              
+                <a href="part-3.html" class="badge rounded-pill bg-buas text-decoration-none">Part 3</a>
+                <a href="part-3.html" class="text-light">Add style to your page</a>
+              
+            </h2>
+          </div>
+        </header>
+        <article class="row justify-content-center">
+          <div class="col-md-6 col-xxl-5 py-3">
+            <h3 class="color-buas text-center">Objectives</h3>
+            <h5>
+              At the end of this part, you will be able to:
+            </h5>
+            <ul>
+              <li>Understand what CSS is and its relationship with HTML.</li>
+              <li>Use basic CSS to modify the style and layout of your website.</li>
+              <li>Get a basic knowledge of Bootstrap and understand its benefits.</li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-xxl-5 py-3 bg-lightblue">
+            <h3 class="color-blue text-center">Contents</h3>
+            <ol>
+            <li>
+              <a href="part-3.html#overview_goals">Overview & goals</a>
+            </li>
+            <li>
+              <a href="part-3.html#what_is_css">CSS Basics</a>
+            </li>
+            <li>
+              <a href="part-3.html#practice_editing_styles">Practice: Edit styles.css</a>
+            </li>
+            <li>
+              <a href="part-3.html#what_is_bootstrap">Bootstrap Basics</a>
+            </li>
+            <li>
+              <a href="part-3.html#combine_bootstrap_css">Combine Bootstrap and your own CSS</a>
+            </li>
+            <li>
+              <a href="part-3.html#using_fonts">Use Web Fonts</a>
+            </li>
+            </ol>
+          </div>
+        </article>
+      </section>
+
       <section id="p_4">
         <header class="section-header justify-content-center text-light bg-gradient py-5 row">
           <div class="col-xxl-10">
