--- a/checklist-individual.html
+++ b/checklist-individual.html
@@ -164,7 +164,7 @@
               <a class="dropdown-item active bg-gradient" href="checklist-individual.html">Individual Assignment</a>
             </li>
             <li>
-              <a class="dropdown-item" href="checklist-group">Group Assignment</a>
+              <a class="dropdown-item" href="checklist-group.html">Group Assignment</a>
             </li>
           </ul>
         </li>
