--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               <a class="dropdown-item" href="checklist-individual.html">Individual Assignment</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#">Group Assignment</a>
+              <a class="dropdown-item" href="checklist-group.html">Group Assignment</a>
             </li>
           </ul>
         </li>
