few fixes part-3

--- a/part-3.html
+++ b/part-3.html
@@ -704,7 +704,7 @@
 		  <!--- right column ends --->	
 		  <!--- left column starts --->
           <div class="col-md-6 col-xxl-5 py-3">
-            <h3 class="color-blue text-center">Colours and text</h3>
+            <h3 class="color-blue text-center" id="colours-and-text">Colours and text</h3>
             <p>Bootstrap uses a default palette where colours are named based on their function:</p>
             <ul class="list-none p-0">
               <li class="d-inline-block px-3 py-1 m-1 rounded bg-primary text-white border border-secondary">Primary</li>
@@ -1124,10 +1124,10 @@
 				<p class="text-primary mb-0 ms-3"> <span class="text-success">color:</span><span class="text-danger"> grey;</span></p>
 				<p class="text-primary">} </p>
 			</div>
-			<p>As you can see the example uses 2 Google fonts that have been installed: Roboto Mono and Nunito Sans. It also makes use of different properties to modify the text, some are self explanatory like <strong>font-size</strong>, <strong>text-align</strong> and <strong>color</strong>, but others are a bit more interesting like:</p>
+			<p>As you can see the example uses two Google fonts that have been installed: Roboto Mono and Nunito Sans. It also makes use of different properties to modify the text, some are self explanatory like <strong>font-size</strong>, <strong>text-align</strong> and <strong>color</strong>, but others are a bit more interesting like:</p>
 			<ul>
-				  <li>text-transform:</li>
-				  <li>text-shadow:</li>
+				  <li><strong>text-transform:</strong> this property will transform any lower case text into uppercase automatically.</li>
+				  <li><strong>text-shadow:</strong> This propery creates a shadow of the text. And as you can see I have used three values: <strong>5px</strong> correspods to the <em>h-shadow</em>, <strong>5px</strong> to the <em>v-shadow</em> and <strong>pink</strong> to the <em>color</em> of the shadow.</li>
 			</ul>
 			<p>This is how the website in the example would look like:</p>
 			  <img class="img-fluid d-block mx-auto py-3" src="images/part-3/example-fonts.png" alt="example fonts styled">
@@ -1138,13 +1138,10 @@
           <div class="col-md-6 col-xxl-5 py-3 bg-lightorange">
             <h3 class="text-center">Fonts in Bootstrap</h3>
             <p>Bootstrap comes with a series of classes that allow you to easily control the alignment, weight, size and other characteristics of your text and fonts.</p>
-			 <p>In the <a href="https://getbootstrap.com/docs/5.0/utilities/text/" target="_blank">Text Utilities</a> section  of the Bootrap website you can find detailed Documentation and examples.</p>
-			 <p>Let's check a couple here:</p>
+			<p>In section <a href="#colours-and-text">3.4 Bootstrap Basics - Colours and Text</a> <strong>of this guide </strong>you can find an overview of classes that are very useful to modify text.</p>
+			 <p>In the <a href="https://getbootstrap.com/docs/5.0/utilities/text/" target="_blank">Text Utilities</a> section of the <strong>Bootrap website</strong> you can find detailed Documentation and examples of other classes including Bootstrap's custom <a href="https://getbootstrap.com/docs/5.1/utilities/text/#font-size" target="_blank">font sizing classes</a>.</p>
           </div>
-		  <!--- right column ends --->		
-          <div class="col-xxl-10 py-3">
-            <h3 class="color-blue text-center">Center Heading&hellip;</h3>
-          </div>
+		  <!--- right column ends --->
         </article>
         <footer class="row bg-gray">
           <div class="col-12 mt-3 mb-4 d-flex flex-wrap justify-content-evenly">
