--- a/part-3.html
+++ b/part-3.html
@@ -1097,7 +1097,7 @@
 		  <!--- right column ends --->	
 		  <!--- left column starts --->
           <div class="col-md-6 col-xxl-5 py-3">
-            <h3 class="color-buas text-center py-3">Styling your fonts</h3>
+            <h3 class="color-buas text-center py-3">An Example</h3>
 			<p>Let's check an example to see different things that we can do to modify the look of fonts</p>
 			<p>This is the HTML code of the website that will be styled</p>
 			<img class="img-fluid d-block mx-auto" src="images/part-3/html-fonts-example.png" alt="example fonts styled">
@@ -1136,7 +1136,18 @@
 		  <!--- left column ends --->
 		  <!--- right column starts --->
           <div class="col-md-6 col-xxl-5 py-3 bg-lightorange">
-            <h3 class="text-center">Fonts in Bootstrap</h3>
+			<h3 class="color-buas text-center py-3">Styling links</h3>
+			<p>While learnign about fonts, let's take the opportunity to see how can we style links.</p>
+			<p>By default, unvisited links are styled as blue, and previously visited links are purple, so let's check how can you style them as you please.</p>
+			<p>In order to do it we first need to understand <strong>Pseudo-Class selectors</strong> which are those that specify a special state of the selected element. So for example, in the case of a link, you can specify how you want it to look when:</p>
+			<ul>
+				<li>The link has been visited</li>
+				<li>The link it has not been visited,</li>
+				<li>The user hovers the mouse over it.</li>
+			</ul>
+			<p>Let's check the syntax of pseudo clases, which as you can see uses a colon (:) </p>
+			
+            <h3 class="color-blue text-center py-3">Fonts in Bootstrap</h3>
             <p>Bootstrap comes with a series of classes that allow you to easily control the alignment, weight, size and other characteristics of your text and fonts.</p>
 			<p>In section <a href="#colours-and-text">3.4 Bootstrap Basics - Colours and Text</a> <strong>of this guide </strong>you can find an overview of classes that are very useful to modify text.</p>
 			 <p>In the <a href="https://getbootstrap.com/docs/5.0/utilities/text/" target="_blank">Text Utilities</a> section of the <strong>Bootrap website</strong> you can find detailed Documentation and examples of other classes including Bootstrap's custom <a href="https://getbootstrap.com/docs/5.1/utilities/text/#font-size" target="_blank">font sizing classes</a>.</p>
