--- a/part-3.html
+++ b/part-3.html
@@ -1053,17 +1053,14 @@
             <h2 class="bg-buas rounded-pill display-6 fw-bold py-1 px-2 d-inline-block">3.6</h2>
           </div>
           <div class="col-10 col-md-5">
-            <h2 class="display-3 fw-bolder lh-1 mb-4">Using Fonts</h2>
+            <h2 class="display-3 fw-bolder lh-1 mb-4">Use Web Fonts</h2>
           </div>
           <div class="col-md-6">
-            <h5>
-              <img class="me-1" src="images/common/film.svg" width="16" alt="film icon">
-              <a class="link-light" href="https://web.microsoftstream.com/" target="_blank">Watch on Microsoft Stream</a>
-            </h5>
+            <h5>Summary</h5>
             <ul>
-              <li>XXXX.</li>
-              <li>XXXX.</li>
-              <li>XXXX.</li>
+			  <li>Learn how to style Fonts using CSS.</li>
+              <li>Learn how to install Web Fonts.</li>
+              <li>Learn how to style hyperlinks.</li>
             </ul>
           </div>
         </header>
@@ -1071,10 +1068,10 @@
 		  <!--- left column starts --->
           <div class="col-md-6 col-xxl-5 py-3">
             <h3 class="color-buas text-center">Fonts in CSS</h3>
-            <p>Fonts in CSS are defined with the <strong>font-family</strong> property. If you only use this property, you have to be careful, because you only have access to fonts that are installed. If you want to use additional fonts, you need to embed a web font in your page</p>
+            <p>Fonts in CSS are defined with the <strong>font-family</strong> property. If you only use this property, you have to be careful, because you only have access to fonts that are installed. If you want <strong>to use additional fonts, you need to embed a web font in your page</strong></p>
 			<p>It's common practice to start with your desired font and then add a couple of family font values as a "fallback" to ensure maximum compatibility across browsers and devices (in the case your desired font is not available the browser will use the next font listed in the property values). These "fallbacks" are usually generic font families such as: <strong>Serif, Sans-serif, Monospace, Cursive, Fantasy</strong>.</p>
 			<h3 class="color-blue text-center py-3">Installing fonts</h3>
-			<p>A popular method of installing fonts is by using the HTML <strong>&lt;link&gt;</strong> tag to embed them in your website. As you already know, the <strong>&lt;link&gt;</strong> elements should go in the <strong>&lt;head&gt;</strong> of your document and they are used to reference external resources, in the case of the fonts it will reference the resources providing the font. It's good practice to put the <strong>&lt;link&gt;</strong>s to the font resources AFTER the &lt;link&gt; to the CSS.</p>
+			<p>A popular method of installing fonts is by using the HTML <strong>&lt;link&gt;</strong> tag to embed them in your website. As you already know, the <strong>&lt;link&gt;</strong> elements should go in the <strong>&lt;head&gt;</strong> of your document and they are used to reference external resources. In the case of fonts it will reference the resources providing the font. It's good practice to put the <strong>&lt;link&gt;</strong>s to the font resources AFTER the &lt;link&gt; to the CSS.</p>
 			<img class="img-fluid pb-3 d-block mx-auto" src="images/part-3/html-link-fonts.png" alt="example <link> to embed Hanalei font">
 			<p>You then can use the installed font by using <strong>font-family</strong> property in your CSS to specify the font you have installed.</p>
 			<img class="img-fluid pb-3 d-block mx-auto" src="images/part-3/css-fontfamily.png" width="300px" alt="example CSS font family Hanalei">
@@ -1086,9 +1083,9 @@
             <p>Google Fonts is the most popular service for Web Fonts. To use one of their fonts:</p>
 			<ul>
 				<li>Go to <a href="https://fonts.google.com/" target="_blank">https://fonts.google.com/</a> and choose a font you want to use.</li>
-				<li>Click on “Select this style” (do not Download)</li>
-				<li>A sidebar opens where you can see the selected font(s) and instructions</li>
-				<li>Click on “link” and follow the instructions</li>
+				<li>Click on “Select this style” (do not Download).</li>
+				<li>A sidebar opens where you can see the selected font(s) and instructions.</li>
+				<li>Click on “link” and follow the instructions.</li>
 				<li>Google gives you one line of code to put in your HTML file, and one to put in your CSS file.</li>
  			</ul>
 			<img src="images/part-3/google-fonts.gif" class="img-fluid d-block mx-auto py-3" width="350px" alt="installing google fonts">
@@ -1098,8 +1095,8 @@
 		  <!--- left column starts --->
           <div class="col-md-6 col-xxl-5 py-3">
             <h3 class="color-buas text-center py-3">Styling fonts: an example</h3>
-			<p>Let's check an example to see different things that we can do to modify the look of fonts</p>
-			<p>This is the HTML code of the website that will be styled. You can see that lines 7, 8, 9 and 10 have &lt;link&gt; tags embedding Google Fonts.</p>
+			<p>Let's check an example to see different things that we can do to modify the look of fonts.</p>
+			<p>This is the HTML code of the website that will be styled. You can see that lines 7, 8, 9 and 10 have <strong>&lt;link&gt;</strong> tags embedding Google Fonts.</p>
 			<img class="img-fluid d-block mx-auto" src="images/part-3/html-fonts-example.png" alt="example fonts styled">
 			<p>This is the CSS code</p>
 			<div class="py-1 px-2 border border-bottom-0 rounded-top border-dark bg-light font-monospace fw-bold w-75">css/<wbr>styles.css</div>
@@ -1124,7 +1121,7 @@
 				<p class="text-primary mb-0 ms-3"> <span class="text-success">color:</span><span class="text-danger"> grey;</span></p>
 				<p class="text-primary">} </p>
 			</div>
-			<p>As you can see the example uses two Google fonts that have been installed: Roboto Mono and Nunito Sans. It also makes use of different properties to modify the text, some are self explanatory like <strong>font-size</strong>, <strong>text-align</strong> and <strong>color</strong>, but others are a bit more interesting like:</p>
+			<p>As you can see the example uses two Google fonts that have been installed: Roboto Mono and Nunito Sans (and each one of these fonts has a "fallback": monospace and sans-serif respectively). It also makes use of different properties to modify the text, some are self explanatory like <strong>font-size</strong>, <strong>text-align</strong> and <strong>color</strong>, but others are a bit more interesting like:</p>
 			<ul>
 				  <li><strong>text-transform:</strong> this property will transform any lower case text into uppercase automatically.</li>
 				  <li><strong>text-shadow:</strong> This propery creates a shadow of the text. And as you can see I have used three values: <strong>5px</strong> correspods to the <em>h-shadow</em>, <strong>5px</strong> to the <em>v-shadow</em> and <strong>pink</strong> to the <em>color</em> of the shadow.</li>
@@ -1137,15 +1134,15 @@
 		  <!--- right column starts --->
           <div class="col-md-6 col-xxl-5 py-3 bg-lightorange">
 			<h3 class="color-buas text-center py-3">Styling links</h3>
-			<p>While learnign about fonts, let's take the opportunity to see how can we style links.</p>
+			<p>While learning about fonts, let's take the opportunity to see how can we style links.</p>
 			<p>By default, unvisited links are styled as blue, and previously visited links are purple, so let's check how can you style them as you please.</p>
-			<p>In order to do it we first need to understand <strong>Pseudo-Class selectors</strong> which are those that specify a special state of the selected element. So for example, in the case of a link, you can specify how you want it to look when:</p>
+			<p>In order to do it we first need to understand <strong>Pseudo-Class selectors</strong> which are those that specify a special state of the selected element. So for example, in the case of a hyperlink (<strong>&lt;a&gt;</strong>), you can specify how you want it to look when:</p>
 			<ul>
 				<li>The link has been visited</li>
 				<li>The link has not been visited</li>
 				<li>The user hovers the mouse over it</li>
 			</ul>
-			<p>This is the syntax of pseudo clases, which as you can see uses a colon (:) </p>
+			<p>This is the syntax of pseudo clases, which as you can see uses a colon (<strong>:</strong>)</p>
 			<p class="text-center text-primary mb-0"> <strong>selector:pseudo-class { <span class="text-success">property:</span><span class="text-danger"> value;</span> }</strong></p>
 			<h3 class="color-buas text-center pt-5 pb-3">Styling links: an example</h3>
 			<p>In the previous example you can see that in line 15 of the HTML code there is a <strong>&lt;a&gt;</strong> element with a hyperlink that has been visited but has not been styled (it's using the default purple color of visited links).</p>
@@ -1167,9 +1164,9 @@
 			</div>
 			<p>As you can see the example uses three <strong>pseudo-classes</strong>:</p>
 			<ul>
-				<li><strong>a:link</strong> styles the link that has not been visited (black)</li>
-				<li><strong>a:visited</strong> styles the link that has been visited (grey)</li>
-				<li><strong>a:hover</strong> styles how the link looks when the user hovers the mouse over it (black with a pink background)</li>
+				<li><strong>a:link</strong> styles the link that has not been visited (black).</li>
+				<li><strong>a:visited</strong> styles the link that has been visited (grey).</li>
+				<li><strong>a:hover</strong> styles how the link looks when the user hovers the mouse over it (black with a pink background).</li>
 			</ul>
 			<p>This is how the link in website would look like now:</p>
 			<img class="img-fluid d-block mx-auto py-3" src="images/part-3/styled-links.gif" alt="example fonts styled">
@@ -1183,8 +1180,8 @@
         </article>
         <footer class="row bg-gray">
           <div class="col-12 mt-3 mb-4 d-flex flex-wrap justify-content-evenly">
-            <a class="btn btn-outline-secondary m-1" href="#part_3">↑ Back to the top of Part 1</a>
-            <a class="btn btn-outline-secondary m-1" href="#using_fonts">↑ Back to the top of &ldquo;Using Fonts&rdquo;</a>
+            <a class="btn btn-outline-secondary m-1" href="#part_3">↑ Back to the top of Part 3</a>
+            <a class="btn btn-outline-secondary m-1" href="#using_fonts">↑ Back to the top of &ldquo;Use Web Fonts&rdquo;</a>
           </div>
         </footer>
       </section>
