--- a/checklist-individual.html
+++ b/checklist-individual.html
@@ -316,7 +316,7 @@
             </div>
             <button type="submit" class="btn btn-lg btn-danger w-100 mb-3 d-print-none">Click here then choose &ldquo;Save as PDF&rdquo; to generate your hand-in document</button>
             <p>Please follow the naming conventions: the PDF must be named <strong><span id="file-fullname">PRJ4_2122_<span id="file-studentid"></span>_individualwebsite</span>.pdf</strong></p> 
-            <p>Please upload to Teams Assignment [LINK TO BE ADDED]</p>
+            <p>Please upload to <a href="https://teams.microsoft.com/l/message/19:7a654fe45125448ea8401a39b9bfca2e@thread.tacv2/1643721223609?tenantId=0a33589b-0036-4fe8-a829-3ed0926af886&groupId=e7b56faf-0485-4b99-8680-f893de2d940c&parentMessageId=1643721223609&teamName=Student%20-%20Projects%20Year%202%2021%2F22&channelName=PRJ4%20-%20Brand%20Development&createdTime=1643721223609" target="_blank">Teams » Student Projects Year 2 21/22 » Assignments » PRJ4-PRO Individual Web Development</a></p>
           </form>
         </div>
       </section>
