Added class field

--- a/checklist-individual.html
+++ b/checklist-individual.html
@@ -279,16 +279,22 @@
           <h3 class="text-center color-blue">Form to fill in and print as PDF</h3>
           <form class="needs-validation" id="print-form">
             <div class="row">
-              <div class="col-6">
+              <div class="col-4">
                 <div class="form-floating mb-3">
                   <input class="form-control" id="namefield" placeholder="Firstname Lastname" required>
                   <label for="namefield" class="form-label">Your name</label>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-4">
                 <div class="form-floating mb-3">
                   <input class="form-control" id="idfield" placeholder="123456" required>
                   <label for="idfield" class="form-label">Your student ID</label>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="form-floating mb-3">
+                  <input class="form-control" id="classfield" type="number" min="1" max="6" required>
+                  <label for="classfield" class="form-label">Your class</label>
                 </div>
               </div>
               <div class="col-6">
