--- a/part-3.html
+++ b/part-3.html
@@ -268,7 +268,8 @@
               <li>One background colour, which can also be done both ways</li>
               <li>One font, where you will need to use an external service such as <a href="https://fonts.google.com/" target="_blank">Google Fonts</a>, <a href="https://fonts.adobe.com/" target="_blank">Adobe Fonts</a> or <a href="https://www.fontshare.com/" target="_blank">Fontshare</a>.</li>
             </ol>
-            <p>These skills will be essential as you start working on the group assignment, which must use styles to </p>
+            <p>Another requirement is that you must make at least one of these changes by creating a new, custom <strong>CSS class</strong>.</p>
+            <p>These skills will be essential as you start working on the group assignment, which must use styles to convey the style guide and personality of your brand.</p>
           </div>
         </article>
         <footer class="row bg-gray">
